[package]
name = "evm-json-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
keccak-hash = "0.10.0"
hex = "0.4.3"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35.1", features = ["full"] }
ethabi = "18.0.0"
